Update Spring Boot to 2.6.1 and the code to Java 17 and records. Improve/demonstrate a more accurate input validation. Replace inline builders with annotation processor based generated builders.